WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
145076
REGRESSION (
r181910
): WKWebView incorrectly scales snapshot
https://bugs.webkit.org/show_bug.cgi?id=145076
Summary
REGRESSION (r181910): WKWebView incorrectly scales snapshot
James Savage
Reported
2015-05-15 15:36:10 PDT
We are always assuming that the ratio between snapshot rect size and snapshot size will be device scale, which is not always correct.
Attachments
Correct the scale and transform used for IOSurface snapshots.
(3.47 KB, patch)
2015-05-15 15:43 PDT
,
James Savage
no flags
Details
Formatted Diff
Diff
Updated change log
(3.89 KB, patch)
2015-05-15 15:56 PDT
,
James Savage
thorton
: review+
Details
Formatted Diff
Diff
Updated for review feedback.
(3.91 KB, patch)
2015-05-15 16:08 PDT
,
James Savage
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Savage
Comment 1
2015-05-15 15:43:59 PDT
Created
attachment 253231
[details]
Correct the scale and transform used for IOSurface snapshots.
James Savage
Comment 2
2015-05-15 15:45:24 PDT
rdar://19816542
James Savage
Comment 3
2015-05-15 15:56:55 PDT
Created
attachment 253232
[details]
Updated change log
Tim Horton
Comment 4
2015-05-15 15:59:40 PDT
Comment on
attachment 253232
[details]
Updated change log View in context:
https://bugs.webkit.org/attachment.cgi?id=253232&action=review
> Source/WebKit2/ChangeLog:3 > + Web view snapshots incorrectly scale transform
Title should probably start with "REGRESSION (
r181910
):", and maybe WKWebView instead of "Web view" and "snapshot" instead of "transform"?
James Savage
Comment 5
2015-05-15 16:08:18 PDT
Created
attachment 253233
[details]
Updated for review feedback.
James Savage
Comment 6
2015-05-15 16:24:58 PDT
Whoops, this is actually
rdar://problem/20410944
.
WebKit Commit Bot
Comment 7
2015-05-15 16:28:42 PDT
Comment on
attachment 253233
[details]
Updated for review feedback. Rejecting
attachment 253233
[details]
from commit-queue.
james.savage@apple.com
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Commit Bot
Comment 8
2015-05-15 17:23:16 PDT
Comment on
attachment 253233
[details]
Updated for review feedback. Clearing flags on attachment: 253233 Committed
r184422
: <
http://trac.webkit.org/changeset/184422
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug